# vkr_ml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manager.py  nb.ipynb  pyproject.toml
cl_okpd2/: cleanings.py  constants.py  download_nltk_corpus.py  etl.py  main.py  ml.py
data/: test.csv
models/: cat_boost.cbm  cat_boost.vec  logistic_regression.pkl  random_forest.vec
